--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Au Embassy</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span></span>
-          <span></span>
-          <span></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -338,7 +336,7 @@
       </div>
       <div class="buttons">
         <div class="next"></div>
-        <div class="prev"></div>
+        <div class="prev"></div>s
       </div>
     </div>
   </section>
