--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="./about.html">About Company</a></li>
-                <li><a class="dropdown-item" href="./mesagefromceo.html">Meet Our Team</a></li>
+                <li><a class="dropdown-item" href="./ourteam.html">Meet Our Team</a></li>
                 <li><a class="dropdown-item" href="./mesagefromceo.html">Message From CEO</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link" href="./service.html"role="button" aria-expanded="false">
                 Our Services
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="./service.html">Service 1</a></li>
                 <li><a class="dropdown-item" href="#">Service 2</a></li>
-              </ul>
+              </ul> -->
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
