--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg">
-          <div class="section-title"><h2>Our Client</h2></div>
+          <div class="section-title"><h2>Our Universities</h2></div>
         </div>
       </div>
        <section class="customer-logos slider">
