--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     </div>
   </footer>
   <div class="copyrightText">
-    <p>Copyright Ⓒ  TEC GROUP & Design and Developed by GLOBEL IOT. All rights reserved</p>
+    <p>Copyright Ⓒ  TEC GROUP & Design and Developed by GLOBAL IOT. All rights reserved</p>
   </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    
